source/styles.css
.portfolio-header {
  position: relative;
  background-image: url(images/header-bg.jpg);
}

.portfolio-header .mdl-layout__header-row {
  padding: 0;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.mdl-cell{
  background: rgba(0, 0, 0, 0);
}

.mdl-card{
  background: rgba(255, 255, 255, 0.3);
}

.mdl-layout__title {
  font-size: 14px;
  text-align: center;
  font-weight: 300;
  color: rgba(255, 255, 255, 0.7);
}

.is-compact .mdl-layout__title span {
  display: none;
}

.portfolio-logo-row {
  min-height: 200px;
}

.is-compact .portfolio-logo-row {
  min-height: auto;
}

.portfolio-logo {
  background: url(images/logo.png) 50% no-repeat;
  background-size: cover;
  height: 150px;
  width: 150px;
  margin: auto auto 10px;
}


.is-compact .portfolio-logo {
  height: 50px;
  width: 50px;
  margin-top: 7px;
}

.portfolio-navigation-row {
  background-color: rgba(255, 255, 240, 0.5);
  text-transform: uppercase;
  height: 45px;
}

@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */
  .portfolio-navigation-row  .mdl-navigation {
    text-align: center;
    max-width: 200px;
    width: 100%;
  }
}

@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
  .portfolio-navigation-row  .mdl-navigation {
    text-align: center;
    max-width: 300px;
    width: 100%;
  }
}
@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
  .portfolio-navigation-row  .mdl-navigation {
    text-align: center;
    max-width: 400px;
    width: 100%;
  }
}
@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
  .portfolio-navigation-row  .mdl-navigation {
    text-align: center;
    max-width: 600px;
    width: 100%;
  }
}
@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
  .portfolio-navigation-row  .mdl-navigation {
    text-align: center;
    max-width: 800px;
    width: 100%;
  }
}
@media (min-width:1281px) { /* hi-res laptops and desktops */
  .portfolio-navigation-row  .mdl-navigation {
    text-align: center;
    max-width: 1000px;
    width: 100%;
  }
}



.portfolio-navigation-row .mdl-navigation__link {
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
  line-height: 42px;
}

.portfolio-header .mdl-layout__drawer-button {
    background-color: rgba(197, 197, 197, 0.44);
}

.portfolio-navigation-row .is-active {
  position: relative;
  font-weight: bold;
}

.portfolio-navigation-row .is-active:after {
  content: "";
  width: 70%;
  height: 2px;
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: rgb(255, 255, 240);
  left: 15%;
}

.portfolio-card .mdl-card__title {
  padding-bottom: 0;
}
/*
.portfolio-blog-card-full-bg {
  background: url(images/example-blog03.jpg) center / cover;
}

.portfolio-blog-card-event-bg {
  background: url(images/example-blog05.jpg) center / cover;
}

.portfolio-blog-card-strip-bg {
  background: url(images/example-blog06.jpg) center / cover;
}
*/
.portfolio-blog-card-compact .mdl-card__title {
  padding-bottom: 0;
}

.portfolio-blog-card-bg > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: rgba(0, 0, 0, 0.2);
}

img.article-image {
  width: 100%;
  height: auto;
}


@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */
  .portfolio-max-width {
    max-width: 200px;
    margin: auto;
  }
  .portfolio-copy {
    max-width: 200px;
  }
}

@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
  .portfolio-max-width {
    max-width: 300px;
    margin: auto;
  }
  .portfolio-copy {
    max-width: 300px;
  }
}
@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
  .portfolio-max-width {
    max-width: 400px;
    margin: auto;
  }
  .portfolio-copy {
    max-width: 400px;
  }
}
@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
  .portfolio-max-width {
    max-width: 600px;
    margin: auto;
  }
  .portfolio-copy {
    max-width: 600px;
  }
}
@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
  .portfolio-max-width {
    max-width: 800px;
    margin: auto;
  }
  .portfolio-copy {
    max-width: 800px;
  }
}
@media (min-width:1281px) { /* hi-res laptops and desktops */
  .portfolio-max-width {
    max-width: 1000px;
    margin: auto;
  }
  .portfolio-copy {
    max-width: 800px;
  }
}


.no-padding {
  padding: 0;
}

.no-left-padding{
  padding-left: 0;
}

.no-bottom-padding {
  padding-bottom: 0;
}

.padding-top {
  padding: 10px 0 0;
}

.portfolio-share-btn {
  position: relative;
  float: right;
  top: -4px;
}

.demo-card-event > .mdl-card__actions {
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    box-sizing: border-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}

.portfolio-contact .mdl-textfield {
  width: 100%;
}

.portfolio-contact form {
  max-width: 550px;
  margin: auto;
}

.mdl-logo {
  color: rgba(255, 255, 255, 0.7);
  /*
  background-size: cover;
  */
}

footer {
  background-image: url(images/header-bg.jpg);
  /*
  background-size: cover;
  */
}

body {
  background-image: url(images/body.jpg);
  /*
  background-size: cover;
  */
}

